Working with initPage(), creating an Abstract methods - parentclass for multi platform